Sat Jul 16 03:19:45 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (is_socket, is_console): add prototypes to fix compile
	  problem with gcc introduced at r32549.
	  reported by Jon Forums. [Bug #5030] [ruby-core:38079]

Sat Jul 16 00:55:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* time.c (time_dup): used rb_obj_class() instead of CLASS_OF().
	  The patch is made by Kazuki Tsujimoto. [Bug #5012] [ruby-dev:44071]

	* test/ruby/test_time.rb (TestTime#test_getlocal_dont_share_eigenclass):
	  added a new test for eigenclass of time object.

Fri Jul 15 19:11:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (bigsub_int): add RB_GC_GUARD.  This patch is made by
	  Makoto Kishimoto.  fixes #4223 [ruby-dev:42907]

	* bignum.c (bigadd_int): ditto.

Fri Jul 15 14:27:53 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/win32.h (rb_w32_io_cancelable_p): renamed
	  from rb_w32_has_cancel_io().  now it takes a parameter as fd to check
	  the fd is console or not, because we cannot cancel console input even
	  if we have cancel_io function.

	* io.c (WAIT_FD_IN_WIN32): call above function instead of the old one,
	  so now we can kill the thread which calls STDIN.gets.
	  the problem was reported by ko1 via IRC.

Fri Jul 15 09:10:41 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/digest/sha2/sha2.c (SHA256_Update, SHA512_Update): avoid Bus
	  Error caused by unalignment access on Sparc-Solaris (and possibly on
	  other similar environment.) This patch just do memcpy always instead
	  of checking architecture. I see no perf drop on my 64bit env. For
	  more details, see #4320.

	* test/digest/test_digest.rb: add test for unalignment access.

Fri Jul 15 01:51:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regint.h (PLATFORM_UNALIGNED_WORD_ACCESS): Power PC does not
	  allow unaligned word access.

	* st.c (UNALIGNED_WORD_ACCESS): x86_64 allows unaligned word
	  access as well as i386.
